examples/network-policy/np-webapp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: np-webapp
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: np-webapp
    spec:
      containers:
      - image: djkormo/np-webapp
        imagePullPolicy: Always
        name: sa-webapp
        ports:
          - containerPort: 8080
