examples/network-policy/np-frontend-service-lb.yaml
apiVersion: v1
kind: Service            
metadata:
  name: np-frontend-lb
spec:
  type: LoadBalancer       
  ports:
  - port: 9999             
    protocol: TCP          
    targetPort: 80         
  selector:                
    app: np-frontend
