examples/network-policy/np-logic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-logic
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: np-logic
