examples/network-policy/np-webapp-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-webapp-lb
spec:
  type: LoadBalancer
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 8080
  selector:
    app: np-webapp
