examples/network-policy/np-webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: np-ingress-webapp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /sentiment
        backend:
          serviceName: np-webapp-lb
          servicePort: 80
